Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102646

QQuickFlickable wheel event not work correct for mouse device with pixel scroll wheel support for NoScrollPhase

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.3.1, 6.4.0 Beta1
    • 6.2.4
    • QPA
    • None
    • macOS Big Sur
      Version 11.6 (20G165)
      MacBook Pro(13-inch, M1, 2020)
      Chip Apple M1
      Memory 16 GB

      Mouse: 
      Logitech MX Master 3

      Additional app:
      Logi options(Logi options +Beta)
    • macOS
    • 69586864d3 (qt/qtdeclarative/dev) 69586864d3 (qt/tqtc-qtdeclarative/dev) 907b9f4d34 (qt/qtdeclarative/6.3) 907b9f4d34 (qt/tqtc-qtdeclarative/6.3)

    Description

      QQuickListView scroll event not work correct if use mouse Logitech MX Master3 with official application for settings "Logi options" or "Logi options +beta" on macOS. The problem is that mouse with "Logi options" app become magic mouse with pixel scroll wheel support, and scroll event is happened with NoScrollPhase, it means that it is scrolled as touchpad but without pressPosition(according the current logic in qquickflickable::scrollEvent) it is expect all scroll phase(begin + end) with pressPosition. It influences only for qml, for QListView it works fine

      Code:

      import QtQuick
      import QtQuick.Window
      
      Window {
          width: 640
          height: 480
          visible: true
      
          ListView {
              id: view
              objectName: "listView"
              anchors.fill: parent
      
              model: 200
      
              delegate: Rectangle {
                  width: view.width
                  height: 60
      
                  Text {
                      anchors.centerIn: parent
                      font.pixelSize: 30
                      text: index
                  }
      
                  color: Qt.rgba(Math.random(), Math.random(), Math.random(), 1.0)
              }
          }
      }

      Actual result: scroll does not work at all or with some delays or with not understandable behaviour(jumping in random place, scrolling with very little speed etc)

      Expected result: scroll works correct

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            evgenpervenenko Evgen Pervenenko
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews