Flickable: if QWheelEvent scrollPhase is missing, use angleDelta

Some Logitech mice may send pixel deltas, but they are synthesized from
the rotation of the physical mouse wheel, not from planar movement of
fingers on a surface. We can't tell when the user's finger(s) come in
contact with the device, so we don't call maybeBeginDrag(), so
h/vData.dragMin/MaxBound variables don't get initialized, and the bounds
checking in QQuickFlickablePrivate::drag() doesn't work correctly.
That could be fixed; but then the next problem is that
accumulatedWheelPixelDelta keeps getting incremented in the overshoot
condition, as if the wheel had a watch spring getting "wound up"; and if
ScrollBegin never occurs, it won't get reset back to 0, 0. Also, the
"springy" overshoot behavior needs to be driven by the MomentumPhase
or by the animation timeline; it was implemented for "dumb" mouse wheels
and for touchpads, but not for this case where pixelDelta is available
and scrollPhase is not.

When QWheelEvent::phase() gives us NoScrollPhase, that tells us that the
device cannot detect whether the user's finger(s) are touching or not,
so we revert to "classic" mouse wheel behavior using angleDelta instead.
The "feel" is more consistent this way.

Fixes: QTBUG-102646
Change-Id: I39a55fdf6d93f3569a82a41169a66db20e7ac003
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 69586864d3e4d8b537aa3d6c2f6c09de76e330f2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>